--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "pinia": "^2.0.0",
+    "require": "^2.4.20",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
